--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,40 +5,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity"
     tools:layout_editor_absoluteY="25dp">
 
-    <Button
-        android:id="@+id/button_toast"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
-        android:text="@string/button_label_toast"
-        android:onClick="showToast"/>
 
     <TextView
-        android:id="@+id/show_count"
+        android:id="@+id/show_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/count_text_size"
+        android:textSize="32sp"
         android:textStyle="bold"
-        android:textColor="@color/colorPrimary"
-        android:background="@color/myBackgroundColor"
-        android:text="@string/count_initial_value"
-        android:layout_weight="2"
+        android:textColor="@color/myBackgroundColor"
+        android:background="@color/colorPrimary"
+        android:text="Materiales:"
         android:gravity="center"/>
 
     <Button
-        android:id="@+id/button_count"
+        android:id="@+id/button_material1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
-        android:text="@string/button_label_count"
-        android:onClick="countUp"/>
+        android:background="#9e989d"
+        android:onClick="openFile"
+        android:gravity="center"
+        android:text="Prueba Mates"
+        android:layout_margin="10dp"
+        android:textColor="@android:color/black" />
+
+    <Button
+        android:id="@+id/button_material2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#9e989d"
+        android:onClick="openFile"
+        android:gravity="center"
+        android:text="Prueba INFO"
+        android:layout_margin="10dp"
+        android:textColor="@android:color/black" />
 </LinearLayout>
