--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,5 +46,6 @@
         android:id="@+id/button_subir"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:onClick="subirMaterial"
+        android:text="SUBIR MATERIAL" />
 </LinearLayout>
